<resources>
    <string name="app_name">ShiftTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pick_date">Choose your date of birth</string>
    <string name="enter_password">Password</string>
    <string name="repeat_password">Repeat password</string>
</resources>